attempting to link to pdfs/syllabus.pdf instead

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <h1>Vector calculus</h1>
 
 <h3>Stuff!</h3>
-<a href="http://chrisnatoli.github.io/syllabus.pdf">Syllabus</a>
+<a href="http://chrisnatoli.github.io/pdfs/syllabus.pdf">Syllabus</a>
 <p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
 
 <h3>Stuff!</h3>
