forgot to add index.html in last commit

--- a/index.html
+++ b/index.html
@@ -13,25 +13,24 @@
     <div class="wrapper">
       <header>
         <h1>Chris Natoli</h1>
-        <p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah </p>
+        <p>chrisnatoli@gmail.com</p>
 
 
-        <!--<p class="view"><a href="https://github.com/chrisnatoli">View My GitHub Profile</a></p>-->
 
       </header>
       <section>
 
-          <h1>Vector calculus</h1>
+          <h2>Vector calculus</h2>
 
-<h3>Stuff!</h3>
-<a href="http://chrisnatoli.github.io/pdfs/syllabus.pdf">Syllabus</a>
-<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+          <h3>General stuff</h3>
+          <p><a href="/pdfs/syllabus.pdf">Syllabus</a></p>
 
-<h3>Stuff!</h3>
-<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+<h3>Problem sets</h3>
+None yet!
+<!--<ol>
+    <li>
+</ol>-->
 
-<h3>Stuff!</h3>
-<p>blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
 
 
       </section>
