added baby goat in lieu of anything else

--- a/index.html
+++ b/index.html
@@ -14,10 +14,8 @@
       <header>
         <h1>Chris Natoli</h1>
         <p>chrisnatoli@gmail.com</p>
-
-
-
       </header>
+
       <section>
 
           <h2>Vector calculus</h2>
@@ -25,15 +23,16 @@
           <h3>General stuff</h3>
           <p><a href="/pdfs/syllabus.pdf">Syllabus</a></p>
 
-<h3>Problem sets</h3>
-None yet!
-<!--<ol>
-    <li>
-</ol>-->
+          <h3>Problem sets</h3>
+          <p>None yet!</p>
+          <!--<ol>
+              <li>
+          </ol>-->
 
-
-
+          <h3>Baby goat</h3>
+          <img style="width: auto; max-height: 280px;" src="babygoat.jpg">
       </section>
+
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
