--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="wrapper">
       <header>
         <h1>Chris Natoli</h1>
+        <p>Adjunct lecturer at Hunter College's mathematics department</p>
         <p>chrisnatoli@gmail.com</p>
       </header>
 
@@ -22,6 +23,8 @@
 
           <h3>General stuff</h3>
           <p><a href="/pdfs/syllabus.pdf">Syllabus</a></p>
+
+          <!--<h3>Announcements</h3>-->
 
           <h3>Problem sets</h3>
           <p>None yet!</p>
