--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <!--<h3>Announcements</h3>-->
 
           <h3>Problem sets</h3>
-          <p>None yet!</p>
+          <p><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8</p>
           <!--<ol>
               <li>
           </ol>-->
