changed hw list to unordered list

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
           <!--<h3>Announcements</h3>-->
 
           <h3>Problem sets</h3>
-          <p><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8</p>
-          <!--<ol>
-              <li>
-          </ol>-->
+          <ul>
+              <li><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8</p>
+          </ul>
 
           <h3>Baby goat</h3>
           <img style="width: auto; max-height: 280px;" src="babygoat.jpg">
