--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <h3>Problem sets</h3>
           <ul>
               <li><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8</p>
+              <li><a href="/pdfs/hw2.pdf">Problem set 2</a> due Thursday, September 15</p>
           </ul>
 
           <h3>Baby goat</h3>
