small changes to syllabus

--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 
           <h2>Vector calculus</h2>
 
-          <h3>General stuff</h3>
           <p><a href="/pdfs/syllabus.pdf">Syllabus</a></p>
 
-          <!--<h3>Announcements</h3>-->
+          <h3>Announcements</h3>
+          <ul>
+              <li> Updated the syllabus: Office hours are now after class on Tuesdays, and 5\% of the final grade was shifted from problem sets to the midterm.
+          </ul>
 
           <h3>Problem sets</h3>
           <ul>
