cosmetic changes to announcement

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
           <h3>Announcements</h3>
           <ul>
-              <li> Updated the syllabus: Office hours are now after class on Tuesdays, and 5\% of the final grade was shifted from problem sets to the midterm.
+              <li> (September 14) Updated the syllabus: Office hours are now after class on Tuesdays, and 5% of the final grade was shifted from problem sets to the midterm.
           </ul>
 
           <h3>Problem sets</h3>
