--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <li><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8</p>
               <li><a href="/pdfs/hw2.pdf">Problem set 2</a> due Thursday, September 15</p>
               <li><a href="/pdfs/hw3.pdf">Problem set 3</a> due Thursday, September 22</p>
+              <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due Thursday, September 29</p>
           </ul>
 
           <h3>Baby goat</h3>
