--- a/index.html
+++ b/index.html
@@ -25,15 +25,18 @@
 
           <h3>Announcements</h3>
           <ul>
-              <li> (September 14) Updated the syllabus: Office hours are now after class on Tuesdays, and 5% of the final grade was shifted from problem sets to the midterm.
+              <li> (posted September 22) The midterm will be on Thursday October 13. It will cover everything we have done so far up to and including area of surfaces, but not including integrals of scalar functions over surfaces. Major topics that will be covered on the midterm include scalar fields and vector fields, path integrals, line integrals, parametrized surfaces and tangent planes, and area of surfaces. I will upload a set of review problems soon. Class on September 29 will be set aside for answering your questions, especially questions you have about the review problems, so please look at them in advance. 
+              <li> (posted September 22) Problem set 4 is due <i>Tuesday September 27</i>, not Thursday September 29, so that I can grade it and give it back to you by the 29th. Note that I removed the fourth problem from problem set 4.
+              <li> (posted September 22) There will be no class between September 29 and October 13 due to schedule changes. We will have class on Friday October 14, since it's a CUNY Tuesday.
+              <li> (posted September 14) Updated the syllabus: Office hours are now after class on Tuesdays, and 5% of the final grade was shifted from problem sets to the midterm.
           </ul>
 
           <h3>Problem sets</h3>
           <ul>
-              <li><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8</p>
-              <li><a href="/pdfs/hw2.pdf">Problem set 2</a> due Thursday, September 15</p>
-              <li><a href="/pdfs/hw3.pdf">Problem set 3</a> due Thursday, September 22</p>
-              <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due Thursday, September 29</p>
+              <li><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8
+              <li><a href="/pdfs/hw2.pdf">Problem set 2</a> due Thursday, September 15
+              <li><a href="/pdfs/hw3.pdf">Problem set 3</a> due Thursday, September 22
+              <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due <i>Tuesday, September 27</i>
           </ul>
 
           <h3>Baby goat</h3>
