added midterm rewiew problems

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>Chris Natoli</h1>
         <p>Adjunct lecturer at Hunter College's mathematics department</p>
         <p>chrisnatoli@gmail.com</p>
+        <img style="width: auto; max-height: 200px;" src="babygoat.jpg">
       </header>
 
       <section>
@@ -25,6 +26,7 @@
 
           <h3>Announcements</h3>
           <ul>
+              <li> (posted September 25) Here are many <a href="/pdfs/midterm_review.pdf">review problems for the midterm</a>.
               <li> (posted September 22) The midterm will be on Thursday October 13. It will cover everything we have done so far up to and including area of surfaces, but not including integrating scalar fields over surfaces. Major topics that will be covered on the midterm include scalar fields and vector fields, path integrals, line integrals, parametrized surfaces and tangent planes, and area of surfaces. I will upload a set of review problems soon. Class on September 29 will be set aside for answering your questions, especially questions you have about the review problems, so please look at them in advance. 
               <li> (posted September 22) Problem set 4 is due <i>Tuesday September 27</i>, not Thursday September 29, so that I can grade it and give it back to you by the 29th. Note that I removed the fourth problem from problem set 4.
               <li> (posted September 22) There will be no class between September 30 and October 12 due to schedule changes. We will have class on Friday October 14, since it's a CUNY Tuesday.
@@ -39,8 +41,6 @@
               <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due <i>Tuesday, September 27</i>
           </ul>
 
-          <h3>Baby goat</h3>
-          <img style="width: auto; max-height: 280px;" src="babygoat.jpg">
       </section>
 
       <footer>
