--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <li><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8
               <li><a href="/pdfs/hw2.pdf">Problem set 2</a> due Thursday, September 15 (<a href="/pdfs/hw2soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw3.pdf">Problem set 3</a> due Thursday, September 22 (<a href="/pdfs/hw3soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due <i>Tuesday, September 27</i>
+              <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due Tuesday, September 27 (<a href="/pdfs/hw4soln.pdf">solutions</a>)
           </ul>
 
       </section>
