--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               <li><a href="/pdfs/hw3.pdf">Problem set 3</a> due Thursday, September 22 (<a href="/pdfs/hw3soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due Tuesday, September 27 (<a href="/pdfs/hw4soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw5.pdf">Problem set 5</a> due Thursday, October 27
+              <li><a href="/pdfs/hw6.pdf">Problem set 6</a> due Thursday, November 3
           </ul>
 
       </section>
