--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
               <li><a href="/pdfs/hw5.pdf">Problem set 5</a> due Thursday, October 27 (<a href="/pdfs/hw5soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw6.pdf">Problem set 6</a> due Thursday, November 3 (<a href="/pdfs/hw6soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw7.pdf">Problem set 7</a> due Thursday, November 10
+              <li><a href="/pdfs/hw8.pdf">Problem set 8</a> due Thursday, November 17
           </ul>
 
           <h3>Announcements</h3>
