--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
               <li><a href="/pdfs/hw6.pdf">Problem set 6</a> due Thursday, November 3 (<a href="/pdfs/hw6soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw7.pdf">Problem set 7</a> due Thursday, November 10
               <li><a href="/pdfs/hw8.pdf">Problem set 8</a> due Thursday, November 17
+              <li><a href="/pdfs/hw9.pdf">Problem set 9</a> due Tuesday, November 28
           </ul>
 
           <h3>Announcements</h3>
