reflected last change in index

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
               <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due Tuesday, September 27 (<a href="/pdfs/hw4soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw5.pdf">Problem set 5</a> due Thursday, October 27 (<a href="/pdfs/hw5soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw6.pdf">Problem set 6</a> due Thursday, November 3 (<a href="/pdfs/hw6soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw7.pdf">Problem set 7</a> due Thursday, November 10
-              <li><a href="/pdfs/hw8.pdf">Problem set 8</a> due Thursday, November 17
+              <li><a href="/pdfs/hw7.pdf">Problem set 7</a> due Thursday, November 10 (<a href="/pdfs/hw7soln.pdf">solutions</a>)
+              <li><a href="/pdfs/hw8.pdf">Problem set 8</a> due Thursday, November 17 (<a href="/pdfs/hw8soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw9.pdf">Problem set 9</a> due Tuesday, November 28
           </ul>
 
