--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
               <li><a href="/pdfs/hw5.pdf">Problem set 5</a> due Thursday, October 27 (<a href="/pdfs/hw5soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw6.pdf">Problem set 6</a> due Thursday, November 3 (<a href="/pdfs/hw6soln.pdf">solutions</a>)
               <li><a href="/pdfs/hw7.pdf">Problem set 7</a> due Thursday, November 10 (<a href="/pdfs/hw7soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw8.pdf">Problem set 8</a> due Thursday, November 17 (<a href="/pdfs/hw8soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw9.pdf">Problem set 9</a> due Tuesday, November 28
+              <li><a href="/pdfs/hw8.pdf">Problem set 8</a> due Thursday, November 17 (<a href="/pdfs/hw8soln.pdf">solutions</a> (I think my solution for #2 is incorrect))
+              <li><a href="/pdfs/hw9.pdf">Problem set 9</a> due Tuesday, November 29
+              <li><a href="/pdfs/hw10.pdf">Problem set 10</a> due Tuesday, December 6
           </ul>
 
           <h3>Announcements</h3>
