--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
           <h2>Resources</h2>
           <ul>
-              <li><a href="/pdfs/constitution_summary">A summary of the PSC constitution for activists</a>
+              <li><a href="/pdfs/constitution_summary.pdf">A summary of the PSC constitution for activists</a>
           </ul>
 
           <h2>Classes taught</h2>
