reorganzied vector calc files and page

--- a/vector_calc.html
+++ b/vector_calc.html
@@ -22,29 +22,29 @@
 
           <h2>Vector calculus</h2>
 
-          <p><a href="/pdfs/syllabus.pdf">Syllabus</a></p>
+          <p><a href="/pdfs/vector_calc/syllabus.pdf">Syllabus</a></p>
 
           <h3>Problem sets</h3>
           <ul>
-              <li><a href="/pdfs/hw1.pdf">Problem set 1</a> due Thursday, September 8
-              <li><a href="/pdfs/hw2.pdf">Problem set 2</a> due Thursday, September 15 (<a href="/pdfs/hw2soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw3.pdf">Problem set 3</a> due Thursday, September 22 (<a href="/pdfs/hw3soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw4.pdf">Problem set 4</a> due Tuesday, September 27 (<a href="/pdfs/hw4soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw5.pdf">Problem set 5</a> due Thursday, October 27 (<a href="/pdfs/hw5soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw6.pdf">Problem set 6</a> due Thursday, November 3 (<a href="/pdfs/hw6soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw7.pdf">Problem set 7</a> due Thursday, November 10 (<a href="/pdfs/hw7soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw8.pdf">Problem set 8</a> due Thursday, November 17 (<a href="/pdfs/hw8soln.pdf">solutions</a> (I think my solution for #2 is incorrect))
-              <li><a href="/pdfs/hw9.pdf">Problem set 9</a> due Tuesday, November 29 (<a href="/pdfs/hw9soln.pdf">solutions</a>)
-              <li><a href="/pdfs/hw10.pdf">Problem set 10</a> due Tuesday, December 6 (<a href="/pdfs/hw10soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw1.pdf">Problem set 1</a> due Thursday, September 8
+              <li><a href="/pdfs/vector_calc/hw2.pdf">Problem set 2</a> due Thursday, September 15 (<a href="/pdfs/vector_calc/hw2soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw3.pdf">Problem set 3</a> due Thursday, September 22 (<a href="/pdfs/vector_calc/hw3soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw4.pdf">Problem set 4</a> due Tuesday, September 27 (<a href="/pdfs/vector_calc/hw4soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw5.pdf">Problem set 5</a> due Thursday, October 27 (<a href="/pdfs/vector_calc/hw5soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw6.pdf">Problem set 6</a> due Thursday, November 3 (<a href="/pdfs/vector_calc/hw6soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw7.pdf">Problem set 7</a> due Thursday, November 10 (<a href="/pdfs/vector_calc/hw7soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw8.pdf">Problem set 8</a> due Thursday, November 17 (<a href="/pdfs/vector_calc/hw8soln.pdf">solutions</a> (I think my solution for #2 is incorrect))
+              <li><a href="/pdfs/vector_calc/hw9.pdf">Problem set 9</a> due Tuesday, November 29 (<a href="/pdfs/vector_calc/hw9soln.pdf">solutions</a>)
+              <li><a href="/pdfs/vector_calc/hw10.pdf">Problem set 10</a> due Tuesday, December 6 (<a href="/pdfs/vector_calc/hw10soln.pdf">solutions</a>)
           </ul>
 
           <h3>Announcements</h3>
           <ul>
               <li> (posted December 12) The review session will be Thursday, 8:30pm to 9:45pm, in the usual room (HW 411). Please don't enter the room early since another class's final is being held in that room, scheduled to end at 8:20pm. Also, please look over the review problems I uploaded to the course website so that you can ask questions about them in the review session.
-              <li> (posted December 11) Here are many <a href="/pdfs/final_review.pdf">review problems for the final</a>. There will be a review session some time this week, likely Thursday, depending on when the registrar gets back to me about booking a room.
+              <li> (posted December 11) Here are many <a href="/pdfs/vector_calc/final_review.pdf">review problems for the final</a>. There will be a review session some time this week, likely Thursday, depending on when the registrar gets back to me about booking a room.
               <li> (posted December 11) The final exam is seven questions long (some questions have multiple parts, however). I expect it to be a little longer than the midterm, but you will have two hours for the final, whereas the midterm was only one hour and fifteen minutes. Contrary to my previous statements, the final exam will focus on the material we covered since the midterm, i.e., everything after surface area. Note that this material pre-requires the material covered before the midterm: types, gradient, curl, divergence, path integrals, line integrals, and parametrized surfaces. Curvature, Euler number, and different sizes of infinity will not be on the exam. No cheat sheets or calculators are allowed on the exam; all you'll need to bring is a writing utensil and an eraser.
               <li> (posted November 3) The final exam will be on December 20 at 7:30pm-9:30pm in the usual classroom (HW 411).
-              <li> (posted September 25) Here are many <a href="/pdfs/midterm_review.pdf">review problems for the midterm</a>.
+              <li> (posted September 25) Here are many <a href="/pdfs/vector_calc/midterm_review.pdf">review problems for the midterm</a>.
               <li> (posted September 22) The midterm will be on Thursday October 13. It will cover everything we have done so far up to and including area of surfaces, but not including integrating scalar fields over surfaces. Major topics that will be covered on the midterm include scalar fields and vector fields, path integrals, line integrals, parametrized surfaces and tangent planes, and area of surfaces. I will upload a set of review problems soon. Class on September 29 will be set aside for answering your questions, especially questions you have about the review problems, so please look at them in advance. 
               <li> (posted September 22) Problem set 4 is due <i>Tuesday September 27</i>, not Thursday September 29, so that I can grade it and give it back to you by the 29th. Note that I removed the fourth problem from problem set 4.
               <li> (posted September 22) There will be no class between September 30 and October 12 due to schedule changes. We will have class on Friday October 14, since it's a CUNY Tuesday.
