moved index to resources, and made index into landing page for calc 1

--- a/resources.html
+++ b/resources.html
@@ -13,21 +13,22 @@
     <div class="wrapper">
       <header>
         <h1>Chris Natoli</h1>
-        <p>Adjunct lecturer at Hunter College's math department
-        and math PhD student at the CUNY Graduate Center</p>
+        <p>socialist and math PhD student at the CUNY Graduate Center</p>
         <p>chrisnatoli@gmail.com</p>
         <img style="width: auto; max-height: 200px;" src="babygoat.jpg">
       </header>
 
       <section>
 
-          <h2>Calculus with Analytic Geometry I</h2>
-
-          <p><a href="/pdfs/calc1/syllabus.pdf">Syllabus</a></p>
-
-          <h3>Announcements</h3>
+          <h2>Resources</h2>
           <ul>
-              <li> (none yet!)
+              <li><a href="/pdfs/constitution_summary.pdf">A summary of the PSC constitution for activists</a>
+          </ul>
+
+          <h2>Classes taught</h2>
+          <ul>
+              <li><a href="/vector_calc.html">Vector calculus</a> at Hunter College, fall 2016
+              <li><a href="/index.html">Calculus 1</a> at Hunter College, summer 2016
           </ul>
 
       </section>
