added calc 1 syllabus

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <header>
         <h1>Chris Natoli</h1>
-        <p>Adjunct lecturer at Hunter College's math department
+        <p>Adjunct lecturer at Hunter College
         and math PhD student at the CUNY Graduate Center</p>
         <p>chrisnatoli@gmail.com</p>
         <img style="width: auto; max-height: 200px;" src="babygoat.jpg">
@@ -27,7 +27,7 @@
 
           <h3>Announcements</h3>
           <ul>
-              <li> (none yet!)
+              <li> (none yet)
           </ul>
 
       </section>
