added info about webassign and first pset

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 
           <p><a href="/pdfs/calc1/syllabus.pdf">Syllabus</a></p>
 
+          <p>WebAssign access code is "hunter 7500 4616".
+
           <h3>Announcements</h3>
           <ul>
-              <li> (none yet)
+              <li> (June 5) The first problem set is on WebAssign, and it is split into two parts, corresponding to the two sections of the textbook we have covered. It is due on Thursday, June 8th, at 11:59pm. Let me know if you have any issues with the online homework system.
           </ul>
 
       </section>
