added review problems for exam 1

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
           <h3>Announcements</h3>
           <ul>
+              <li> (June 14) Here are <a href="/pdfs/calc1/exam1_review.pdf">review problems</a> for the first exam.
               <li> (June 13) The first exam will be on Tuesday, June 20. It will cover everything up to and including the chain rule.
               <li> (June 5) The first problem set is on WebAssign, and it is split into two parts, corresponding to the two sections of the textbook we have covered. It is due on Thursday, June 8th, at 11:59pm. Let me know if you have any issues with the online homework system.
           </ul>
