added review problems for exam 3

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
           <h3>Announcements</h3>
           <ul>
+              <li> (July 5) Here are <a href="/pdfs/calc1/exam3_review.pdf">review problems for the third exam</a>.
               <li> (June 25) Here are <a href="/pdfs/calc1/exam2_review.pdf">review problems for the second exam</a>.
               <li> (June 23) Exam 2 will be on Thursday, June 29, and it will cover up to and including section 3.5 (optimization problems).
                   Exam 3 will be on July 11, and the final exam will be on the last day of classes, July 13.
