added review problems for the final

--- a/index.html
+++ b/index.html
@@ -29,7 +29,17 @@
 
           <h3>Announcements</h3>
           <ul>
+              <li> (July 10) Turns out I get to make the final exam, and it is not department-wide.
+                  Here are <a href="/pdfs/calc1/final_exam_review.pdf">review problems for the final exam</a>.
+                  Note that the final exam is cumulative, excluding section 7.3.
+                  Related rates (section 2.7) and optimization (section 3.5) will definitely be on the final.
+                  Also, you should consider review problems for all previous exams to be additional review problems for the final.
+              <li> (July 10) Since there are two exams this week, Problem Set 11 will be optional.
+                  If you do it, I will drop the two lowest problem set scores from your grade, rather than one.
+                  Not doing Problem Set 11 won't affect your grade.
+                  That said, Problem Set 11 will be good review for the final exam, and it is effectively extra credit.
               <li> (July 5) Here are <a href="/pdfs/calc1/exam3_review.pdf">review problems for the third exam</a>.
+                  Note that Exam 3 covers from section 3.7 though section 4.5.
                   Note that Exam 3 covers from section 3.7 though section 4.5.
               <li> (June 25) Here are <a href="/pdfs/calc1/exam2_review.pdf">review problems for the second exam</a>.
               <li> (June 23) Exam 2 will be on Thursday, June 29, and it will cover up to and including section 3.5 (optimization problems).
