moved calc1 to calc1_summer2017 and vector_calc to vector_call2016

--- a/resources.html
+++ b/resources.html
@@ -27,8 +27,9 @@
 
           <h2>Classes taught</h2>
           <ul>
-              <li><a href="/vector_calc.html">Vector calculus</a> at Hunter College, fall 2016
-              <li><a href="/index.html">Calculus 1</a> at Hunter College, summer 2016
+              <li><a href="/vector_calc_fall2016.html">Vector calculus</a> at Hunter College, fall 2016
+              <li><a href="/calc1_summer2017.html">Calculus 1</a> at Hunter College, summer 2017
+              <li><a href="/index.html">Calculus 1</a> at Hunter College, summer 2017
           </ul>
 
       </section>
