--- a/index.html
+++ b/index.html
@@ -23,30 +23,11 @@
 
           <h2>Calculus with Analytic Geometry I</h2>
 
-          <p><a href="/pdfs/calc1/syllabus.pdf">Syllabus</a></p>
-
-          <p>WebAssign access code is "hunter 7500 4616".
+          <p><a href="/pdfs/calc1_fall2017/syllabus.pdf">Syllabus</a></p>
 
           <h3>Announcements</h3>
           <ul>
-              <li> (July 10) Turns out I get to make the final exam, and it is not department-wide.
-                  Here are <a href="/pdfs/calc1/final_exam_review.pdf">review problems for the final exam</a>.
-                  Note that the final exam is cumulative, excluding section 7.3.
-                  Related rates (section 2.7) and optimization (section 3.5) will definitely be on the final.
-                  Also, you should consider review problems for all previous exams to be additional review problems for the final.
-              <li> (July 10) Since there are two exams this week, Problem Set 11 will be optional.
-                  If you do it, I will drop the two lowest problem set scores from your grade, rather than one.
-                  Not doing Problem Set 11 won't affect your grade.
-                  That said, Problem Set 11 will be good review for the final exam, and it is effectively extra credit.
-              <li> (July 5) Here are <a href="/pdfs/calc1/exam3_review.pdf">review problems for the third exam</a>.
-                  Note that Exam 3 covers from section 3.7 though section 4.5.
-                  Note that Exam 3 covers from section 3.7 though section 4.5.
-              <li> (June 25) Here are <a href="/pdfs/calc1/exam2_review.pdf">review problems for the second exam</a>.
-              <li> (June 23) Exam 2 will be on Thursday, June 29, and it will cover up to and including section 3.5 (optimization problems).
-                  Exam 3 will be on July 11, and the final exam will be on the last day of classes, July 13.
-              <li> (June 14) Here are <a href="/pdfs/calc1/exam1_review.pdf">review problems for the first exam</a>.
-              <li> (June 13) Exam 1 will be on Tuesday, June 20. It will cover everything up to and including the chain rule.
-              <li> (June 5) The first problem set is on WebAssign, and it is split into two parts, corresponding to the two sections of the textbook we have covered. It is due on Thursday, June 8th, at 11:59pm. Let me know if you have any issues with the online homework system.
+              <li> Nothing yet!
           </ul>
 
       </section>
