--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
           <h3>Announcements</h3>
           <ul>
+            <li> Here are <a href="/pdfs/calc1_fall2017/final_exam_review.pdf">some review problems</a> for the final exam. Note that the following <a href="/pdfs/calc1_fall2017/formulas.pdf">formulas</a> will be provided for you on the final but not on exam 3.
               <li> Exam 3 will be on Wednesday, December 6, covering sections 3.7 through 4.5. You can find review problems <a href="/pdfs/calc1_fall2017/exam3_review.pdf">here</a>.
               <li> The final exam will be on December 18, from 1:45-3:45, in the same classroom (507 HW).
               <li> Exam 2 will be on Monday, November 13. It will cover sections 2.6 through 3.5. No calculators or formula sheets are allowed on the exam. You can find review problems <a href="/pdfs/calc1_fall2017/exam2_review.pdf">here</a>.
