--- a/index.html
+++ b/index.html
@@ -21,18 +21,11 @@
 
       <section>
 
-          <h2>Calculus with Analytic Geometry I</h2>
-
-          <p><a href="/pdfs/calc1_fall2017/syllabus.pdf">Syllabus</a></p>
-
-          <h3>Announcements</h3>
-          <ul>
-            <li> Here are <a href="/pdfs/calc1_fall2017/final_exam_review.pdf">some review problems</a> for the final exam. Note that the following <a href="/pdfs/calc1_fall2017/formulas.pdf">formulas</a> will be provided for you on the final but not on exam 3. Scientific Calculators <b>are</b> permitted on the final exam.
-              <li> Exam 3 will be on Wednesday, December 6, covering sections 3.7 through 4.5. You can find review problems <a href="/pdfs/calc1_fall2017/exam3_review.pdf">here</a>.
-              <li> The final exam will be on December 18, from 1:45-3:45, in the same classroom (507 HW).
-              <li> Exam 2 will be on Monday, November 13. It will cover sections 2.6 through 3.5. No calculators or formula sheets are allowed on the exam. You can find review problems <a href="/pdfs/calc1_fall2017/exam2_review.pdf">here</a>.
-              <li> Exam 1 will be in class on Wednesday, October 11. It will cover the first nine items on the syllabus, i.e., sections 1.3 through 2.5. No calculators or formula sheets are allowed on the exam. You can find review problems <a href="/pdfs/calc1_fall2017/exam1_review.pdf">here</a>.
-          </ul>
+          <h2>
+            I used to use this website for my courses.
+            <br />
+            Please go to my <a href="https://nato.li">new website</a> instead.
+          </h2>
 
       </section>
 
